--- a/avd/base/templates/base/base.html
+++ b/avd/base/templates/base/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load  base_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,11 +17,7 @@
             <ul id="mainmenu" class="mainmenu">
             <li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
 {% for p in possibility %}
-    {% if not forloop.last %}
             <li><a href="{% url p.url_name %}">{{ p.title }}</a> </li>
-    {% else %}
-            <li class="last"><a href="{% url p.url_name %}">{{ p.title }}</a> </li>
-    {% endif %}
 {% endfor %}
         </ul>
         <div class="clear"></div>
