--- a/avd/base/templates/base/login.html
+++ b/avd/base/templates/base/login.html
@@ -1,7 +1,6 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-    <h1>{{ title }}</h1>
   <div class="input-container">
     <i class="fa fa-envelope icon"></i>
       <label>
@@ -16,5 +15,5 @@
       </label>
   </div>
 
-  <button type="submit" class="btn"><a href="user_account.html"> Войти</a></button>
+  <button type="submit" class="btn"><a href="user"> Войти</a></button>
 {% endblock %}
