--- a/avd/base/templates/base/base.html
+++ b/avd/base/templates/base/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 {% load  base_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,12 +12,16 @@
 <table class="table-page" border=0 cellpadding="0" cellspacing="0">
 <tr><td valign=top>
     {% block mainmenu %}
+        {% load cache %}
+        {% cache 60 possible %}
         <h1><a href="{% url 'home' %}">{{ title }}</a></h1>
         {% for p in possibility %}
     <li><a href="{% url p.url_name %}">{{ p.title }}</a></li>
             {% endfor %}
+        {% endcache %}
         {% if request.user.is_authenticated %}
         <li class="last"><a href="{% url 'logout' %}">Выйти</a></li>
+        <li class="last">Вы зашли как <a href="{% url 'user_page' %}">{{ user.username }}</a></li>
         {% else %}
         <li class="last"><a href="{% url 'login' %}">Войти</a></li>
         <li class="last"><a href="{% url 'registration' %}">Регистрация</a></li>
