--- a/avd/base/templates/base/info.html
+++ b/avd/base/templates/base/info.html
@@ -1,5 +1,14 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-<p>Содержимое информационной страницы</p>
+<form method="post">
+    {% csrf_token %}
+
+{% for f in form %}
+<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+<div class="form-error">{{ f.errors }}</div>
+{% endfor %}
+
+    <button type="submit">Отправить</button>
+</form>
 {% endblock %}
